--- a/zip_viewer/viewer/pages/Preview.module.scss
+++ b/zip_viewer/viewer/pages/Preview.module.scss
@@ -18,8 +18,15 @@
   left: 0;
   right: 0;
   bottom: 0;
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.image_loading {
+  @extend .image;
+  width: auto;
+  height: auto;
 }
 
 .text_container {
