--- a/zip_viewer/viewer/comopnents/PdfViewer.module.scss
+++ b/zip_viewer/viewer/comopnents/PdfViewer.module.scss
@@ -6,6 +6,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
